--- a/SoftTech/Views/UserAuthentication/Authentication.cshtml
+++ b/SoftTech/Views/UserAuthentication/Authentication.cshtml
@@ -1,82 +1,91 @@
 ﻿@{
-	Layout = null;
+    Layout = null;
 }
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-	<link rel="stylesheet" href="~/css/login-registration.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="~/css/login-registration.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-	<div class="section">
-		<div class="container">
-			<div class="row full-height justify-content-center">
-				<div class="col-12 text-center align-self-center py-5">
-					<div class="section pb-5 pt-5 pt-sm-2 text-center">
-						<h6 class="mb-0 pb-3"><span>Sign In </span><span>Sign Up</span></h6>
-						<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
-						<label for="reg-log"></label>
-						<div class="card-3d-wrap mx-auto">
-							<div class="card-3d-wrapper">
-								<div class="card-front">
-									<div class="center-wrap">
-										<div class="section text-center">
-											<h4 class="mb-4 pb-3">Welcome Back</h4>
-											<form asp-action="Login" method="post">
-												<div class="form-group">
-													<input type="text" name="UserName" class="form-style" placeholder="Your Username" id="logusername" autocomplete="off">
-													<i class="input-icon uil uil-user"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input type="password" name="Password" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
-													<i class="input-icon uil uil-lock-alt"></i>
-												</div>
-												<button type="submit" class="btn mt-4">Submit</button>
-												<p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
-											</form>
-										</div>
-									</div>
-								</div>
-								<div class="card-back">
-									<div class="center-wrap">
-										<div class="section text-center">
-											<h4 class="mb-4 pb-3">Create a New Account</h4>
-											<form asp-action="Registration" method="post">
-												<div class="form-group">
-													<input type="text" name="Name" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
-													<i class="input-icon uil uil-user"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input type="email" name="Email" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
-													<i class="input-icon uil uil-at"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input type="text" name="UserName" class="form-style" placeholder="Your Username" id="logusername" autocomplete="off">
-													<i class="input-icon uil uil-user"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input type="password" name="Password" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
-													<i class="input-icon uil uil-lock-alt"></i>
-												</div>
-												<div class="form-group mt-2">
-													<input type="password" name="PasswordConfirm" class="form-style" placeholder="Password Confirm" id="logpassconfirm" autocomplete="off">
-													<i class="input-icon uil uil-lock-alt"></i>
-												</div>
-												<button type="submit" class="btn mt-4">Submit</button>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div class="section">
+        <div class="container">
+            <div class="row full-height justify-content-center">
+                <div class="col-12 text-center align-self-center py-5">
+                    <div class="section pb-5 pt-5 pt-sm-2 text-center">
+                        <h6 class="mb-0 pb-3"><span>Sign In </span><span>Sign Up</span></h6>
+                        <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+                        <label for="reg-log"></label>
+                        <div class="card-3d-wrap mx-auto">
+                            <div class="card-3d-wrapper">
+                                <div class="card-front">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Welcome Back</h4>
+                                            <form asp-action="Login" method="post">
+                                                <div class="form-group">
+                                                    <input type="text" name="UserName" class="form-style" placeholder="Your Username" id="logusername" autocomplete="off">
+                                                    <i class="input-icon uil uil-user"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="Password" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <button type="submit" class="btn mt-4">Submit</button>
+                                                <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-back">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Create a New Account</h4>
+                                            <form asp-action="Registration" method="post">
+                                                <div class="form-group">
+                                                    <input type="text" name="Name" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
+                                                    <i class="input-icon uil uil-user"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="email" name="Email" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
+                                                    <i class="input-icon uil uil-at"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="text" name="UserName" class="form-style" placeholder="Your Username" id="logusername" autocomplete="off">
+                                                    <i class="input-icon uil uil-user"></i>
+                                                </div>
+
+                                                <div class="form-group mt-2">
+                                                    <input type="text" name="Phone_Number" class="form-style" placeholder="Your Phone number" id="logphone" autocomplete="off">
+                                                    <i class="input-icon uil uil-at"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="text" name="Address" class="form-style" placeholder="Your Address" id="logaddress" autocomplete="off">
+                                                    <i class="input-icon uil uil-at"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="Password" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="PasswordConfirm" class="form-style" placeholder="Password Confirm" id="logpassconfirm" autocomplete="off">
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <button type="submit" class="btn mt-4">Submit</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
