--- a/SoftTech/wwwroot/css/site.css
+++ b/SoftTech/wwwroot/css/site.css
@@ -1,18 +1,101 @@
-html {
-  font-size: 14px;
+
+.table {
+    border-collapse: collapse;
+    width: 100%;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+  
+    .table th {
+        padding: 10px;
+        text-align: left;
+        background-color: #0f0c29; 
+        color: white;
+    }
+
+   
+    .table td {
+        padding: 8px;
+        text-align: left;
+    }
+
+    #bodyList{
+        background-color:whitesmoke;
+    }
+
+h1 {
+    padding-left: 450px;
+    margin-bottom: 100px;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+#sub {
+    display: inline-block;
+    padding: 10px;
+    background-color: #0f0c29; 
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
 }
 
-body {
-  margin-bottom: 60px;
+
+#selectCRUD {
+    padding: 8px;
+    font-size: 14px;
+    color: white;
+    background-color: #0f0c29;
+    border-radius: 5px;
 }
+
+    #selectCRUD option {
+        background-color: #0f0c29;
+        color: white;
+    }
+
+
+
+form {
+    max-width: 400px;
+    padding: 20px;
+    background-color: #ecf0f1; 
+    border: 1px solid #bdc3c7;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #0f0c29; 
+}
+
+
+.form-control {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid #bdc3c7;
+    border-radius: 3px;
+}
+
+
+.btn-primary {
+    background-color: #0f0c29; 
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+
+a {
+    color: #3498db; 
+    text-decoration: none;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+
+    a:hover {
+        text-decoration: underline;
+    }
