Se realiza la mayoria de la funcionalidad del modulo de recursos humanos.

--- a/SoftTech/Views/Shared/_Layout.cshtml
+++ b/SoftTech/Views/Shared/_Layout.cshtml
@@ -25,6 +25,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Departamentos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Empleados</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Payroll" asp-action="Index">Nominas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SalaryEmployee" asp-action="Index">Pagos Salarios</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -38,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - SoftTech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - SoftTech
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
