Se implementan los servicios y home page

--- a/SoftTech/Views/Home/Index.cshtml
+++ b/SoftTech/Views/Home/Index.cshtml
@@ -1,8 +1,98 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+<!DOCTYPE html>
+<html lang="es">
 
-<div class="text-center">
-    <h2 class="display-4">Welcome</h2>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body>
+
+    <header class="bg-custom text-white text-center py-2">
+        <h1>Servicios de SoftTech</h1>
+    </header>
+    <div class="contact-icon">
+        <a href="https://web.whatsapp.com/" target="_blank"><img src="https://seeklogo.com/images/C/chatcoin-chat-logo-D655A30A39-seeklogo.com.png" style="width:70px;" /></a>
+    </div>
+
+    <main class="container mt-4">
+
+        <div class="row">
+            <!-- Card 1 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Consultoría</h2>
+                        <p class="card-text">
+                            Nuestra consultoría de software está diseñada para ofrecer soluciones
+                            personalizadas que potencien tu entorno tecnológico y optimicen la eficiencia de tus operaciones.
+                            Nos destacamos por brindar asesoramiento experto, implementando las mejores prácticas de la
+                            industria y asegurando que tu software esté alineado con tus objetivos comerciales.
+                        </p>
+                        <img src="https://idtconsultores.com/wp-content/uploads/2020/11/ilustracion-01-consultoria@2x.png" width="300px" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Diseño de Software</h2>
+                        <p class="card-text">
+                            Nuestro servicio de diseño de datos se centra en convertir información compleja
+                            en experiencias visuales comprensibles y atractivas. A través de técnicas avanzadas de diseño y
+                            visualización, damos vida a tus datos, facilitando la comprensión y toma de decisiones informadas.
+                        </p>
+                        <img src="https://www.serviciosdesoftware.com/wp-content/uploads/2020/11/ingenieria-600x3301-1.png" width="300px" />
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Card 3 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Análisis de datos</h2>
+                        <p class="card-text">
+                            Nuestro servicio de análisis de datos está diseñado para proporcionarte una visión
+                            detallada y significativa de tu información. A través de técnicas avanzadas de procesamiento y
+                            modelado de datos, convertimos tus conjuntos de datos en valiosos insights que impulsan decisiones
+                            informadas y estratégicas.
+                        </p>
+                        <img src="https://static.vecteezy.com/system/resources/previews/002/038/669/non_2x/data-analysis-concept-vector.jpg" width="310px" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+    <footer class="bg-custom text-white text-center py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Contacto</h3>
+                    <p>Teléfono: +123 456 789</p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Redes Sociales</h3>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="https://facebook.com" target="_blank" class="text-white">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/2048px-2021_Facebook_icon.svg.png" alt="Facebook" width="30px">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com" target="_blank" class="text-white">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/2491px-Logo_of_Twitter.svg.png" alt="Twitter" width="30px">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+</body>
+</html>
