Se implementa interfaz completa

--- a/SoftTech/Views/Admin/Client_List.cshtml
+++ b/SoftTech/Views/Admin/Client_List.cshtml
@@ -52,7 +52,7 @@
                     </td>
                     <td>
                         <select id="selectCRUD" onchange="redirectToView(this)">
-                            <option value="" selected>Select an option</option>
+                            <option value="" selected>Seleccione</option>
                             <option value="@Url.Action("Edit", new { id = @item.id })">Editar</option>
                             <option value="@Url.Action("Details", new { id = @item.id })">Ver mas</option>
                             <option value="@Url.Action("Delete", new { id = @item.id })">Eliminar</option>
