--- a/SoftTech/Views/AdminEmployees/Delete.cshtml
+++ b/SoftTech/Views/AdminEmployees/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar empleado</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Deseas eliminar al empleado?</h3>
 <div>
-    <h4>Employee</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -70,6 +69,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresar</a>
     </form>
 </div>
