--- a/SoftTech/Views/Department/Delete.cshtml
+++ b/SoftTech/Views/Department/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Desea eliminar el departamento?</h3>
 <div>
-    <h4>Department</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -28,6 +27,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresar</a>
     </form>
 </div>
