--- a/SoftTech/Views/Employee/Details.cshtml
+++ b/SoftTech/Views/Employee/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles del empleado</h1>
 
 <div>
     <h4>Employee</h4>
@@ -67,6 +67,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar</a>
 </div>
