--- a/SoftTech/Views/Payroll/Delete.cshtml
+++ b/SoftTech/Views/Payroll/Delete.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Payroll</h4>
     <hr />
@@ -52,6 +51,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresar</a>
     </form>
 </div>
