--- a/SoftTech/Views/Salary/Delete.cshtml
+++ b/SoftTech/Views/Salary/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Salary</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -59,6 +57,6 @@
         <input type="hidden" asp-for="id" />
         <input type="hidden" asp-for="@Model.id_payroll" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" asp-route-id_payroll="@Model.id_payroll">Back to List</a>
+        <a asp-action="Index" asp-route-id_payroll="@Model.id_payroll">Regresar</a>
     </form>
 </div>
