--- a/SoftTech/Views/Salary/Details.cshtml
+++ b/SoftTech/Views/Salary/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles de salarios</h1>
 
 <div>
-    <h4>Salary</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -55,5 +54,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index" asp-route-id_payroll="@Model.id_payroll">Back to List</a>
+    <a asp-action="Index" asp-route-id_payroll="@Model.id_payroll">Regresar</a>
 </div>
