--- a/SoftTech/Views/SalaryEmployee/Index.cshtml
+++ b/SoftTech/Views/SalaryEmployee/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Salario</h1>
 
 <table class="table">
     <thead>
@@ -34,33 +34,37 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.id_payrollNavigation.date_payroll)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.id_employeeNavigation.name_emp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.horas_e)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.gross_salary)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.income_tax)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ccss_amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.net_salary)
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.id">Details</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.id_payrollNavigation.date_payroll)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.id_employeeNavigation.name_emp)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.horas_e)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.gross_salary)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.income_tax)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ccss_amount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.net_salary)
+                </td>
+                <td>
+                    <select id="selectCRUD" onchange="redirectToView(this)">
+                        <option value="" selected>Seleccione</option>
+                        <option value="@Url.Action("Details", new { id = @item.id })">Ver mas</option>
+                    </select>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
