--- a/SoftTech/Views/Shared/_Layout.cshtml
+++ b/SoftTech/Views/Shared/_Layout.cshtml
@@ -15,29 +15,47 @@
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Home_Page">SoftTech</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="Client_List">Clientes</a>
+                <a class="navbar-brand" asp-area="" asp-controller="AdminEmployees" asp-action="Index">Empleados</a>
+                <a class="navbar-brand" asp-area="" asp-controller="UserAuthentication" asp-action="Logout">Cerrar sesion</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
 
-                </button>               
+                </button>
             </nav>
         </header>
     }
-    else if (User.IsInRole("client"))
+    @if (User.IsInRole("client"))
     {
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Home_Page">SoftTech</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Servicios</a>
+                <a class="navbar-brand" asp-area="" asp-controller="UserAuthentication" asp-action="Logout">Cerrar sesion</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>               
+                </button>
             </nav>
         </header>
     }
-   
-                        
+    @if (User.IsInRole("human_resources"))
+    {
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+                <a class="navbar-brand" asp-area="" asp-controller="Department" asp-action="Index">Departamentos</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Employee" asp-action="Index">Empleados</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Payroll" asp-action="Index">Nominas</a>
+                <a class="navbar-brand" asp-area="" asp-controller="SalaryEmployee" asp-action="Index">Pagos Salarios</a>
+                <a class="navbar-brand" asp-area="" asp-controller="UserAuthentication" asp-action="Logout">Cerrar sesion</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </header>
+    }    
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
