--- a/SoftTech/Views/Shared/_Layout.cshtml
+++ b/SoftTech/Views/Shared/_Layout.cshtml
@@ -55,6 +55,19 @@
             </nav>
         </header>
     }    
+    @if (User.IsInRole("employee"))
+    {
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+                <a class="navbar-brand" asp-area="" asp-controller="SalaryEmployee" asp-action="Index">Departamentos</a>
+                <a class="navbar-brand" asp-area="" asp-controller="UserAuthentication" asp-action="Logout">Cerrar sesion</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </header>
+    }
 
     <div class="container">
         <main role="main" class="pb-3">
