Se arregla error minimo

--- a/SoftTech/Views/Employee/Delete.cshtml
+++ b/SoftTech/Views/Employee/Delete.cshtml
@@ -69,6 +69,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
+        <input type="hidden" asp-for="id_user" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Regresar</a>
     </form>
